--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -146,7 +146,8 @@
     </div>
     <!--下面列表 -->
     <div>
-      <nz-table #nzTable [nzDataSource]="_displayData" [nzPageSize]="10">
+      <nz-table #nzTable [nzAjaxData]="_displayData" [(nzPageIndex)]="_displayIndex" 
+      [nzTotal]="_displayTotal" [nzPageSize]="5" (nzPageIndexChange)="_nzPageIndexChange()">
         <thead nz-thead>
         <tr>
           <th nz-th nzCheckbox>
@@ -172,15 +173,15 @@
               <label nz-checkbox [(ngModel)]="data.checked" (ngModelChange)="_refreshStatus($event)">
               </label>
             </td>
-            <td nz-td>{{data.id}}</td>
-            <td nz-td>{{data.name}}</td>
-            <td nz-td>{{data.type}}</td>
-            <td nz-td>{{data.way}}</td>
-            <td nz-td>{{data.showNum}}</td>
-            <td nz-td>{{data.cover}}</td>
-            <td nz-td>{{data.price}}</td>
-            <td nz-td>{{data.sales}}</td>
-            <td nz-td>{{data.state}}</td>          
+            <td nz-td>{{data.albumId}}</td>
+            <td nz-td>{{data.albumName}}</td>
+            <td nz-td>{{data.categoryInfo.categoryName}}</td>
+            <td nz-td>{{data.channelInfo.channelName}}</td>
+            <td nz-td>{{data.programsCount}}</td>
+            <td nz-td><img [src]="data.coverUrl" class="cover"></td>
+            <td nz-td>{{data.salePrice}}</td>
+            <td nz-td>{{data.salesCount}}</td>
+            <td nz-td>{{data.shelfStatus}}</td>          
             <td nz-td>
                <span>
                  <a href="javascript:;">
